# heart-age

./: .gitignore  __init__.py  pyproject.toml
notebook/: ecg_loading.ipynb
src/heart-age/: __init__.py  cycles_signal_process.py  ecg_features copy.ipynb  ecg_features_extract.ipynb  ecg_loading.ipynb  ecg_raw_data_analysis.ipynb  feature_loading.py  features_analysis.py  features_extraction.py  features_process.py  paths.py  paths_manager.py  subject_process.py  wave_process.py
src/heart-age/ML/: models_evaluation.py  split_data.py
src/heart-age/convert_data/: features_analysis.py
src/heart-age/features_analysis/: features_analysis.py
src/heart-age/signal_analysis/: signal_analysis.py
